attempt to fix alignment for mobile view on preview mode in IE11.

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -89,9 +89,9 @@ html body {
 }
 
 .page-content {
-    width: 90%;
     max-width: 650px;
-    margin: 40px 5% 20px;
+    margin: 40px 0 20px;
+    padding: 0 20px;
     @media @mobile {
         margin: 20px auto;
     }
